--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+/.idea/*
 
 ###> symfony/framework-bundle ###
 /.env
@@ -6,7 +7,8 @@
 /var/
 /vendor/
 /bin/
-.phar
+*.phar
+*.lock
 ###< symfony/framework-bundle ###
 
 ###> symfony/web-server-bundle ###
